@@ -1,5 +1,12 @@
 2010-03-01  Miguel de Dios  <miguel.dedios@artica.es>
 
+	* extras/pandoradb_migrate_v3.0_to_v3.1.sql: update with the new data in
+	the sql data file of pandora.
+	
+	include/config_process.php: update the version.
+
+2010-03-01  Miguel de Dios  <miguel.dedios@artica.es>
+
 	* godmode/gis_maps/configure_gis_map.php: erase console log in some parts
 	in javascript, and fix the fill a hidden input with the levels of zoom in
 	a connection.
